<resources>
    <string name="app_name">SoCalBeach4Life</string>
    <!--  activity_main.xml  -->
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="logIn">Log in</string>
    <string name="signUpMessage">Don\'t have an account yet? Sign up here!</string>
    <string name="loginFailed">Login failed. Please try again.</string>

    <!--    activity_sign_up.xml -->
    <string name="displayName">Display Name</string>
    <string name="signUp">Sign up</string>
    <string name="logInMessage">Have an account already? Log in here!</string>
    <string name="signUpFailed">An account already exists with that email address. Log in instead!</string>

    <!--    activity_beach_review.xml -->
    <string name="welcomeMessage"><u>Display name</u></string>
    <string name="reviews">Reviews</string>
    <string name="beachName">Beach name</string>
    <string name="rating">Rating:</string>
    <string name="anonymous">Anonymous User</string>
    <string name="reviewDisplayName">User\'s display name</string>
    <string name="reviewPlaceholder">Review placeholder</string>
    <string name="returnToBeach"><u>Return to beach</u></string>

    <!--    activity_create_review.xml -->
    <string name="leaveReview">Leave a review</string>
    <string name="ratingTitle">Rating</string>
    <string name="ratingHint">Rate this beach (1–5 stars)</string>
    <string name="messageTitle">Message</string>
    <string name="messageHint">Describe your experience!</string>
    <string name="postAnonymously">Post anonymously</string>
    <string name="submitReview">Submit review</string>

    <!--    activity_beach_maps.xml -->
    <string name="viewBeaches">Beaches near [Current location]</string>
    <string name="beachAddress">Beach address</string>
    <string name="ratingUnderlined"><u>Rating:</u></string>
    <string name="beachDistance">xx miles away</string>
    <string name="openingHours">9:00–21:00</string>
    <string name="selectBeach"><u>Select beach</u></string>
    <string name="beachInformation">Beach information</string>
    <string name="selectMarker">Click on a marker to learn more</string>

    <!--    activity_parking_lot_maps.xml -->
    <string name="viewParkingLots">Parking lots near [Beach name]</string>
    <string name="parkingLotName">Parking lot name</string>
    <string name="parkingLotAddress">Parking lot address</string>
    <string name="parkingLotDistance">xx miles away</string>
    <string name="selectParkingLot"><u>Select parking lot</u></string>
    <string name="parkingLotInformation">Parking lot information</string>

    <!--    activity_restaurant_maps.xml -->
    <string name="viewRestaurants">Restaurants near [Beach name]</string>
    <string name="ft1000">1000 ft. away</string>
    <string name="ft2000">2000 ft. away</string>
    <string name="ft3000">3000 ft. away</string>
    <string name="restaurantName">Restaurant name</string>
    <string name="restaurantAddress">Restaurant address</string>
    <string name="restaurantDistance">xx miles away</string>
    <string name="viewRestaurantMenu"><u>View menu</u></string>
    <string name="selectRadius">Select radius from the beach for restaurants</string>
    <string name="restaurantMapsLink"><u>Open route in Google Maps</u></string>
    <string name="restaurantMenu"><u>View menu</u></string>

    <!--    activity_save_trip.xml -->
    <string name="tripInformationLabel">Trip Information</string>
    <string name="departNow">Depart now</string>
    <string name="mapsLink"><u>Open in Google Maps</u></string>
    <string name="planAhead">Plan your trip in advance</string>
    <string name="date">Departure Date</string>
    <string name="time">Departure time</string>
    <string name="selectDate"><u>Select departure date</u></string>
    <string name="selectTime"><u>Select departure time</u></string>
    <string name="saveTrip"><u>Save trip</u></string>
    <string name="viewNearbyRestaurants"><u>View nearby restaurants</u></string>
    <string name="leaveReviewLink"><u>Leave a review</u></string>

    <!--    activity_profile.xml -->
    <string name="savedTrips">Saved Trips</string>
    <string name="myReviews">My Reviews</string>
    <string name="numReviews">xx reviews</string>
    <string name="numTrips">xx saved trips</string>
    <string name="dateAndTimePlaceholder">xx/xx/xx yy:yy</string>
    <string name="deleteReview"><u>Delete review</u></string>
    <string name="logOut"><u>Log out</u></string>

    <string name="title_activity_create_review">CreateReviewActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_beach_maps">BeachMapsActivity</string>
    <string name="title_activity_parking_lot_maps">ParkingLotMapsActivity</string>
    <string name="title_activity_restaurant_maps">RestaurantMapsActivity</string>
</resources>