<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toStartOf="@+id/displayNameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/displayNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="134dp"
        android:text="@string/displayName"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/numTripsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="150dp"
        android:text="@string/numTrips"
        android:textColor="@color/black"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/logo"
        app:layout_constraintTop_toBottomOf="@+id/displayNameLabel" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="410dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:clickable="false"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo">

        <Button
            android:id="@+id/savedTripsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/blue"
            android:text="@string/savedTrips" />

        <Button
            android:id="@+id/myReviewsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:background="@color/grey"
            android:textColor="@color/dark_grey"
            android:onClick="myReviews"
            android:text="@string/myReviews" />
    </LinearLayout>

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:stretchColumns="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <View
            android:layout_height="2dip"
            android:background="@color/grey" />

        <TableRow
            android:paddingStart="20dip"
            android:paddingEnd="20dip">

            <TextView
                android:id="@+id/sectionName"
                android:layout_width="wrap_content"
                android:layout_column="0"
                android:layout_span="2"
                android:padding="5dip"
                android:text="@string/beachName"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:paddingStart="20dip"
            android:paddingEnd="20dip">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/date"
                android:layout_column="0"
                android:padding="5dip"
                app:srcCompat="@drawable/calendar" />

            <TextView
                android:layout_column="1"
                android:text="@string/dateAndTimePlaceholder"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:padding="5dip" />
        </TableRow>

        <TableRow>
            <Button
                android:layout_column="2"
                android:layout_width="wrap_content"
                android:text="@string/mapsLink"
                android:textSize="16sp"
                android:textColor="@color/dark_blue"
                android:textAlignment="textEnd"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                android:padding="5dip"/>
        </TableRow>

        <View
            android:layout_height="2dip"
            android:background="@color/grey" />
    </TableLayout>

    <!--    <fragment xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--        xmlns:tools="http://schemas.android.com/tools"-->
<!--        android:id="@+id/map"-->
<!--        android:name="com.google.android.gms.maps.SupportMapFragment"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        tools:context="com.example.currentplacedetailsonmap.MapsActivityCurrentPlace" />-->
<!--    <?xml version="1.0" encoding="utf-8"?>-->
<!--    <fragment xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--        xmlns:map="http://schemas.android.com/apk/res-auto"-->
<!--        android:name="com.google.android.gms.maps.SupportMapFragment"-->
<!--        android:id="@+id/map"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"/>-->

</androidx.constraintlayout.widget.ConstraintLayout>