<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateReviewActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="218dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/reviewIcon"
        app:layout_constraintEnd_toStartOf="@+id/profileButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/mail" />

    <Button
        android:id="@+id/profileButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:text="@string/welcomeMessage"
        android:textAlignment="viewEnd"
        android:textColor="@color/dark_blue"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/reviewIcon"
        android:layout_width="33dp"
        android:layout_height="33dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/reviews"
        app:layout_constraintBottom_toTopOf="@id/beachName"
        app:layout_constraintEnd_toStartOf="@id/reviewLabel"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/notes" />

    <TextView
        android:id="@+id/reviewLabel"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="224dp"
        android:layout_marginBottom="15dp"
        android:text="@string/leaveReview"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/beachName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/beachName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="20dp"
        android:text="@string/beachName"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/ratingLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/ratingIcon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/reviews"
        app:layout_constraintBottom_toTopOf="@id/ratingField"
        app:layout_constraintEnd_toStartOf="@id/ratingLabel"
        app:layout_constraintHorizontal_bias="0.923"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/beachName"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/star_filled" />

    <TextView
        android:id="@+id/ratingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="304dp"
        android:layout_marginBottom="16dp"
        android:text="@string/ratingTitle"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/ratingField"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/ratingField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:autofillHints="password"
        android:background="@color/grey"
        android:hint="@string/ratingHint"
        android:inputType="number"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@id/messageLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="5dp"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <ImageView
        android:id="@+id/messageIcon"
        android:layout_width="28dp"
        android:layout_height="28dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="15dp"
        android:contentDescription="@string/messageTitle"
        app:layout_constraintBottom_toTopOf="@id/messageField"
        app:layout_constraintEnd_toStartOf="@id/messageLabel"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ratingField"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/comment" />

    <TextView
        android:id="@+id/messageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="280dp"
        android:layout_marginBottom="15dp"
        android:text="@string/messageTitle"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/messageField"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/messageField"
        android:layout_width="match_parent"
        android:layout_height="125dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/grey"
        android:hint="@string/messageHint"
        android:importantForAutofill="no"
        android:inputType="text"
        android:padding="5dp"
        android:textColorHint="#757575"
        app:layout_constraintBottom_toTopOf="@+id/anonymousSwitch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="267dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:background="@color/blue"
        android:onClick="submitReview"
        android:padding="10dip"
        android:text="@string/submitReview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/anonymousSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="230dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="30dp"
        android:text="@string/postAnonymously"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>